force-app/main/default/objects/Product_Literature__c/Product_Literature__c.object-meta.xml
<CustomObject>
    <description>Produktunterlagen für den Kunden</description>
    <label>Product Literature</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Product Literature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produkt Literatures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>