force-app/main/default/objects/Product_Literature__c/fields/ELEMENT_H_I__c.field-meta.xml
<CustomField>
    <fullName>ELEMENT_H_I__c</fullName>
    <label>ELEMENT+ H-I</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001128 - Planung ELEMENT+ H-I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>