force-app/main/default/objects/Product_Literature__c/fields/FRAME_Aluminiumfenster__c.field-meta.xml
<CustomField>
    <fullName>FRAME_Aluminiumfenster__c</fullName>
    <label>FRAME+ Aluminiumfenster</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001002 - Planung FRAME+ Aluminiumfenster 75</fullName>
            </value>
            <value>
                <fullName>001117 - Planung/Verarbeitung Lüftungsklappe FRAME+ 75 LF</fullName>
            </value>
            <value>
                <fullName>001052 - Planung FRAME+ Aluminiumfenster 90 WI/SF/WB/WB-T</fullName>
            </value>
            <value>
                <fullName>001065 - Planung FRAME+ Dachfenster 100/120 RI</fullName>
            </value>
            <value>
                <fullName>001016 - Verarbeitung FRAME+ Aluminiumfenster</fullName>
            </value>
            <value>
                <fullName>001053 - Verarbeitung FRAME+ Aluminiumfenster 90 WI/WB/WB-T</fullName>
            </value>
            <value>
                <fullName>001066 - Verarbeitung FRAME+ Dachfenster 100/120 RI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>