force-app/main/default/objects/Product_Literature__c/fields/FRAME_Aluminiumt_r_75_DI__c.field-meta.xml
<CustomField>
    <fullName>FRAME_Aluminiumt_r_75_DI__c</fullName>
    <label>FRAME+ Aluminiumtür 75 DI</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001004 - Planung FRAME+ Aluminiumtür 75 DI</fullName>
            </value>
            <value>
                <fullName>001123 - Planung/Verarbeitung FRAME+ Brandschutztür 75 DI FR30</fullName>
            </value>
            <value>
                <fullName>001005 - Planung FRAME+ Aluminiumtür 75 DI Beschläge</fullName>
            </value>
            <value>
                <fullName>001018 - Verarbeitung FRAME+ Aluminiumtür 75 DI</fullName>
            </value>
            <value>
                <fullName>001019 - Verarbeitung FRAME+ Aluminiumtür 75 DI Beschläge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>