force-app/main/default/objects/Product_Literature__c/fields/Hebe_Schiebet_r_SLIFT_170__c.field-meta.xml
<CustomField>
    <fullName>Hebe_Schiebet_r_SLIFT_170__c</fullName>
    <label>Hebe-Schiebetür SLIFT 170</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001109 - Planung Hebe-Schiebetür SLIFT 170</fullName>
            </value>
            <value>
                <fullName>001111 - Verarbeitung Hebe-Schiebetür SLIFT 170</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>