force-app/main/default/objects/Product_Literature__c/fields/PDFRequested__c.field-meta.xml
<CustomField>
    <fullName>PDFRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Wenn Checkbox angehakt, soll der Unterlagenversand via PDF erfolgen.</inlineHelpText>
    <label>PDF requested</label>
    <type>Checkbox</type>
</CustomField>