force-app/main/default/objects/Product_Literature__c/fields/Prospekte_Flyer__c.field-meta.xml
<CustomField>
    <fullName>Prospekte_Flyer__c</fullName>
    <label>Prospekte, Flyer etc.</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001039 - Infopaket</fullName>
            </value>
            <value>
                <fullName>001082 - Stahl | Fassade | FS-I // Prospekt THERM+ FS-I</fullName>
            </value>
            <value>
                <fullName>1022 - Prospekt Systemübersicht &quot;Wir geben Gebäuden ein Gesicht&quot;</fullName>
            </value>
            <value>
                <fullName>1072 - SKY LIGHT SOLUTION</fullName>
            </value>
            <value>
                <fullName>1044.1 - Flyer Service dt.</fullName>
            </value>
            <value>
                <fullName>1103 - Prospekt Holz | Alu | Fenster (Stemeseder)</fullName>
            </value>
            <value>
                <fullName>1106 - Flyer Schulbau | RAICO macht Schule</fullName>
            </value>
            <value>
                <fullName>1108 - Objekt inside experimenta</fullName>
            </value>
            <value>
                <fullName>1113 - Objekt inside Explorit</fullName>
            </value>
            <value>
                <fullName>1126 - Objekt inside Calwer Passage</fullName>
            </value>
            <value>
                <fullName>1124 - ELEMENT+ H-I // Prospekt Holz-Elementfassade</fullName>
            </value>
            <value>
                <fullName>1118 - Lookbook</fullName>
            </value>
            <value>
                <fullName>1127 - Flyer Brandschutztür FRAME+ 75 DI FR30</fullName>
            </value>
            <value>
                <fullName>2129 - Lookbook Elementierte Fassaden</fullName>
            </value>
            <value>
                <fullName>1110 - Hebe-Schiebetüre SLIFT</fullName>
            </value>
            <value>
                <fullName>1122 - Lüftungsklappe 75 LF Broschüre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>