force-app/main/default/objects/Product_Literature__c/fields/THERM_Aluminium__c.field-meta.xml
<CustomField>
    <fullName>THERM_Aluminium__c</fullName>
    <label>THERM+ Aluminium</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001410 - Planung THERM+ Alu</fullName>
            </value>
            <value>
                <fullName>001011 - Verarbeitung THERM+ A-I</fullName>
            </value>
            <value>
                <fullName>001012 - Verarbeitung THERM+ A-V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>