force-app/main/default/objects/Product_Literature__c/fields/THERM_Holz__c.field-meta.xml
<CustomField>
    <fullName>THERM_Holz__c</fullName>
    <label>THERM+ Holz</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001400 - Planung THERM+ Holz</fullName>
            </value>
            <value>
                <fullName>001013 - Verarbeitung THERM+ H-I</fullName>
            </value>
            <value>
                <fullName>001014 - Verarbeitung THERM+ H-V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>