force-app/main/default/objects/Product_Literature__c/fields/THERM_Stahl__c.field-meta.xml
<CustomField>
    <fullName>THERM_Stahl__c</fullName>
    <label>THERM+ Stahl</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001405 - Planung THERM+ Stahl</fullName>
            </value>
            <value>
                <fullName>001114 - Verarbeitung THERM+ S-I</fullName>
            </value>
            <value>
                <fullName>001116 - Verarbeitung THERM+ FS-I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>