force-app/main/default/objects/Product_Literature__c/fields/THERM_System_bergreifend__c.field-meta.xml
<CustomField>
    <fullName>THERM_System_bergreifend__c</fullName>
    <label>THERM+ Systemübergreifend</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001067 - Lieferprogramm THERM+ Gesamt</fullName>
            </value>
            <value>
                <fullName>001048 - Planung THERM+ Glasdachkonstruktionen</fullName>
            </value>
            <value>
                <fullName>001047 - Verarbeitung THERM+ Glasdachkonstruktionen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>