force-app/main/default/objects/Product_Literature__c/fields/WING_Fenstersysteme__c.field-meta.xml
<CustomField>
    <fullName>WING_Fenstersysteme__c</fullName>
    <label>WING Fenstersysteme</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001006 - Planung WING Dachfenster 105 DI/Einsatzfenster 50 SK/50 A</fullName>
            </value>
            <value>
                <fullName>001020 - Verarbeitung WING Dachfenster 105 DI</fullName>
            </value>
            <value>
                <fullName>001021 - Verarbeitung WING Einsatzfenster 50 SK/50 A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>